@@ -115,14 +115,19 @@ extern "C" {
 int igraph_degree_sequence_game_vl(igraph_t *graph,
 				   const igraph_vector_t *out_seq,
 				   const igraph_vector_t *in_seq) {
-
+  long int sum=igraph_vector_sum(out_seq);
+  if (sum % 2 != 0) {
+    IGRAPH_ERROR("Sum of degrees should be even", IGRAPH_EINVAL);
+  }
+  
   RNG_BEGIN();
 
   if (in_seq && igraph_vector_size(in_seq) != 0) {
     RNG_END();
     IGRAPH_ERROR("This generator works with undirected graphs only", IGRAPH_EINVAL);
   }
-  degree_sequence *dd = new degree_sequence(out_seq);
+
+  degree_sequence *dd = new degree_sequence(out_seq);  
   
   graph_molloy_opt *g = new graph_molloy_opt(*dd);
   delete dd;
